--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/include/caCredits.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/include/caCredits.html
@@ -15,7 +15,7 @@
 			  <td colspan='3'><center><font size='5' color='white'>Community Applications</font></td>
 			</tr>
       <tr>
-        <td class='ca_credit'><br><img src='https://github.com/Squidly271/plugin-repository/raw/master/Chode_300.gif' style='width:5rem;height:4.8rem;'></td>
+        <td class='ca_credit'><img src='https://github.com/Squidly271/plugin-repository/raw/master/Chode_300.gif' style='width:5rem;height:4.8rem;'></td>
         <td class='ca_credit'><font size='6rem;'><em>Andrew Zawadzki&nbsp;&nbsp;</em></font></strong></td>
         <td><font size='6rem;'><em>Main Development</em></font></td>
       </tr>
