--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -188,7 +188,7 @@ function initilizeMenu() {
 		$(".subCategory").hide();
 		$(this).parent().show();
 		$(this).addClass("selectedMenu");
-		$(this).next().show("slow");
+		$(this).next().show(1200);
 	});
 }
 
