--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/include/caCredits.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/include/caCredits.html
@@ -16,8 +16,8 @@
 		</tr>
 		<tr>
 			<td class='ca_credit'><img src='https://github.com/Squidly271/plugin-repository/raw/master/Chode_300.gif' style='width:5rem;height:4.8rem;'></td>
-			<td class='ca_credit'><font size='6rem;'><em>Andrew Zawadzki&nbsp;&nbsp;</em></font></strong></td>
-			<td><font size='6rem;'><em>Main Development</em></font></td>
+			<td class='ca_credit'><font size='3.5rem;'><em>Andrew Zawadzki</em></font></strong></td>
+			<td><font size='3.5rem;'><em>Main Development</em></font></td>
 		</tr>
 		<tr>
 			<td></td>
@@ -27,7 +27,7 @@
 		<tr>
 			<td></td>
 			<td class='ca_credit'>Mex</td>
-			<td class='ca_credit'>GUI Design</td>
+			<td class='ca_credit'>GUI Layout</td>
 		</tr>
 		<tr>
 			<td></td>
