FIXED: do not allow blacklisted apps to be pinned

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/include/caCredits.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/include/caCredits.html
@@ -27,7 +27,7 @@
     <tr>
       <td></td>
       <td class='ca_credit'>Mex</td>
-      <td class='ca_credit'>GUI Layout</td>
+      <td class='ca_credit'>GUI Layout Design</td>
     </tr>
     <tr>
       <td></td>
